# liblitestorecpp

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/litestorecpp/: litestorecpp.hpp
src/: litestorecpp.cpp
tests/: CMakeLists.txt  litestorecpp_ops_test.cpp  litestorecpp_test.cpp  litestorecpp_tx_test.cpp
